# openstack-specs

./: .gitreview  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  template.rst  tox.ini
doc/source/: conf.py  index.rst
specs/: chronicles-of-a-dlm.rst  cli-sorting-args.rst  clouds-yaml-support.rst  cors-support.rst  deprecate-cli.rst  enable-python-3-int-func-tests.rst  eventlet-best-practices.rst  library-stable-branches.rst  log-guidelines.rst  no-downward-sql-migration.rst  requirements-management.rst  return-request-id.rst  service-catalog.rst  supported-messaging-drivers.rst
